test/correct/PMC13.hs
module PMC13 where

main :: Int
main = a [1, 2, 3]

a :: [Int] -> Int
a [1,2,3] = 4
